# Unigram

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
.github/workflows/: Clang Linux Build.yml  GCC Linux Build.yml  MacOS Build.yml  Windows Build.yml
Base/: CMakeLists.txt
Base/Crypto/Crypto.Static/: CMakeLists.txt
Base/Logger/: CMakeLists.txt
Base/Logger/Logger.Static/: CMakeLists.txt
Base/Logger/Public/: CMakeLists.txt
Base/Logger/Public/Include/Logger/: ILogger.hpp
CMakeProject1/: CMakeLists.txt
Client/: CMakeLists.txt
Client/Client.CLI/: App.cpp  App.hpp  CMakeLists.txt  MainClient.cpp
Client/Client.Core/: CMakeLists.txt
Client/Client.Core/Client.Core.Static/: CMakeLists.txt  Client.cpp  Client.hpp  ServerInfo.hpp
Client/Client.Qt/: Application.cpp  Application.hpp  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.hpp  MainWidget.cpp  MainWidget.hpp  Source.cpp  main.cpp
Client/Client.Qt/Pages/: ChannelCreationPage.cpp  ChatPage.hpp  LoginPage.cpp  LoginPage.hpp  RegistrationPage.hpp
Client/Client.Qt/Style/: StyleBasic.cpp  StyleFont.cpp  StyleIcon.cpp  StyleIcons.cpp  StyleIcons.hpp  StyleWidgets.cpp  StyleWidgets.hpp
Client/Client.Qt/Widgets/: AbstractButton.cpp  AbstractButton.hpp  Buttons.cpp  Buttons.hpp  ChatHistory.cpp  ChatHistory.hpp  ChatWidget.cpp  ChatWidget.hpp  InputFields.cpp  LoadingSpinner.cpp  Menu.cpp  MenuItem.cpp  MessageWidget.cpp  MessageWidget.hpp  PopupWidget.cpp  ReactionLayout.cpp  ScrollArea.cpp  ScrollArea.hpp  TextEdit.cpp  TextEdit.hpp  TitleWidget.cpp  TitleWidget.hpp  VoiceMessageWidget.cpp  VoiceMessageWidget.hpp
Client/Client.Qt/resources/: resources.qrc
DataAccess/: CMakeLists.txt
DataAccess/DataAccess.Postgre/: CMakeLists.txt  DataBaseOptions.hpp  PostgreRepositories.cpp  PostgreRepositories.hpp  PostgreRepository.cpp  PostgreRepository.hpp  UsersAmountFinder.cpp  UsersAmountFinder.hpp
DataAccess/DataAccess.Repository/Client/: CMakeLists.txt
DataAccess/DataAccess.Repository/Server/: CMakeLists.txt
DataAccess/Public/: CMakeLists.txt
DataAccess/Public/Include/DataAccess/: IAdapter.hpp  IRepository.hpp  IServerRepositories.hpp  SQLStatements.hpp
Network/: CMakeLists.txt
Network/Public/: CMakeLists.txt
Network/Public/Include/Network/: Connection.hpp  Message.hpp  Primitives.hpp  SerializationHandler.hpp  YasSerializer.hpp
Server/: CMakeLists.txt
Server/Server.Core/Server.Core.Static/: CMakeLists.txt  Server.cpp  Server.hpp
Server/Server.Exec/: CMakeLists.txt  MainServer.cpp
Utility/: CMakeLists.txt
Utility/SQL/: Database_Scheme.sql
Utility/Utility.Public/: CMakeLists.txt
Utility/Utility.Public/Include/Utility/: Utility.hpp
Utility/Utility.Static/: CMakeLists.txt  Cryptography.cpp  Cryptography.hpp
